--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
@@ -6,7 +6,42 @@
              xmlns:local="clr-namespace:SimpleTrader.WPF.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock Text="Stookk"></TextBlock>
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <WrapPanel Grid.Row="0" HorizontalAlignment="Center">
+            <TextBox Width="100" Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}" />
+            <Button Margin="5 0 0 0" Command="{Binding SearchSymbolCommand}" Content="Search" />
+        </WrapPanel>
+
+        <WrapPanel Grid.Row="1"  HorizontalAlignment="Center" Margin="0 10 0 0">
+            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
+                <StackPanel>
+                    <TextBlock Text="{Binding Symbol}"></TextBlock>
+                    <TextBlock Margin="0 10 0 0" Text="{Binding StockPrice, StringFormat={}{0:C}}"></TextBlock>
+                </StackPanel>
+            </Border>
+            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
+                <StackPanel>
+                    <WrapPanel Margin="0 10">
+                        <TextBlock Width="150" Text="Shares to buy:"></TextBlock>
+                        <TextBox Width="50" Text="{Binding SharesToBuy, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    </WrapPanel>
+
+                    <WrapPanel Margin="0 10">
+                        <TextBlock Width="150" Text="Price per share:"></TextBlock>
+                        <TextBlock Text="{Binding StockPrice, StringFormat={}{0:C}}"></TextBlock>
+                    </WrapPanel>
+
+                    <TextBlock FontSize="30" HorizontalAlignment="Center" Text="{Binding TotalPrice, StringFormat={}{0:C}}"></TextBlock>
+
+                    <Button Content="Buy" Command="{Binding BuyStockCommand}"></Button>
+                </StackPanel>
+            </Border>
+        </WrapPanel>
+
     </Grid>
 </UserControl>
