[MVVM]Dynamic Views and Custom Element Styles 取消编辑框与名称绑定解决价格与名称显示不同步，仅在执行命令时更新名称与价格

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
@@ -20,7 +20,7 @@
         <WrapPanel Grid.Row="1"  HorizontalAlignment="Center" Margin="0 10 0 0">
             <Border BorderBrush="Black" BorderThickness="1" Padding="20">
                 <StackPanel>
-                    <TextBlock Text="{Binding Symbol}"></TextBlock>
+                    <TextBlock Text="{Binding SearchResultSymbol}"></TextBlock>
                     <TextBlock Margin="0 10 0 0" Text="{Binding StockPrice, StringFormat={}{0:C}}"></TextBlock>
                 </StackPanel>
             </Border>
