--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
@@ -18,13 +18,23 @@
         </WrapPanel>
 
         <WrapPanel Grid.Row="1"  HorizontalAlignment="Center" Margin="0 10 0 0">
-            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
+            <WrapPanel.Style>
+                <Style TargetType="WrapPanel">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SearchResultSymbol}" Value="">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </WrapPanel.Style>
+            
+            <Border BorderBrush="DimGray" BorderThickness="1" Padding="20" CornerRadius="3 0 0 3">
                 <StackPanel>
                     <TextBlock Text="{Binding SearchResultSymbol}"></TextBlock>
                     <TextBlock Margin="0 10 0 0" Text="{Binding StockPrice, StringFormat={}{0:C}}"></TextBlock>
                 </StackPanel>
             </Border>
-            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
+            <Border BorderBrush="DimGray" BorderThickness="0 1 1 1" Padding="20" CornerRadius="0 3 3 0">
                 <StackPanel>
                     <WrapPanel Margin="0 10">
                         <TextBlock Width="150" Text="Shares to buy:"></TextBlock>
