[MVVM]Dynamic Views and Custom Element Styles 1、购买总价随当前股价更新，2、文本框、按钮样式、滚动条

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/MainWindow.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/MainWindow.xaml
@@ -12,11 +12,11 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <controls:NavigationBar DataContext="{Binding Navigator}"/>
-        </Grid>
-        <Grid Grid.Row="1">
+        
+        <controls:NavigationBar Grid.Row="0" DataContext="{Binding Navigator}"/>
+        
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
             <ContentControl Content="{Binding Navigator.CurrentViewModel}"/>
-        </Grid>
+        </ScrollViewer>
     </Grid>
 </Window>
