[MVVM]登录Command、V及VM，及简单错误PropertyChange默认值类型与属性的类型不匹配

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
@@ -22,6 +22,11 @@
             <DataTemplate DataType="{x:Type viewmodels:BuyViewModel}">
                 <views:BuyView />
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
+                <!--the second LoginCommand is from LoginViewModel-->
+                <views:LoginView LoginCommand="{Binding LoginCommand}" />
+            </DataTemplate>
         </ResourceDictionary>
 
     </Application.Resources>
