--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
@@ -6,17 +6,22 @@
              xmlns:local="clr-namespace:SimpleTrader.WPF.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Background>
+        <ImageBrush ImageSource="/Resources/login-background.jpg" Opacity="0.9" Stretch="UniformToFill" />
+    </UserControl.Background>
+    
     <Border Margin="25" Padding="50"
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
-        Background="White"
+        Background="#7EEE"
         BorderBrush="{StaticResource BrushPrimary2}"
         BorderThickness="3"
         CornerRadius="10">
         <Border.Effect>
             <DropShadowEffect BlurRadius="10" Color="Gray" />
         </Border.Effect>
-    <Grid Grid.IsSharedSizeScope="True">
+        
+        <Grid Grid.IsSharedSizeScope="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
@@ -50,7 +55,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0" Text="Username" />
-                <TextBox Grid.Column="1" Margin="20 0 0 0"
+                    <TextBox Grid.Column="1" Margin="20 0 0 0"
                         Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
 
@@ -61,7 +66,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0" Text="Password" />
-                <PasswordBox x:Name="pbPasswd" Grid.Column="1" Margin="20 0 0 0" />
+                    <PasswordBox x:Name="pbPasswd" Grid.Column="1" Margin="20 0 0 0" Background="Transparent"/>
             </Grid>
                 <!--Command="{Binding LoginCommand}"-->
                 <Button Grid.Row="2" Margin="0 10"
