[MVVM]登录隐藏导航，用户名、密码框样式统一

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
@@ -13,7 +13,7 @@
     <Border Margin="25" Padding="50"
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
-        Background="#7EEE"
+        Background="#DEEE"
         BorderBrush="{StaticResource BrushPrimary2}"
         BorderThickness="3"
         CornerRadius="10">
