[MVVM]资产概要控件，ControlTemplate 典型写法为设置Template属性，再用ControlTemplate给到Value
                                <Setter Property="Template">
                                    <Setter.Value>
                                        <ControlTemplate TargetType="GridViewColumnHeader">
                                            <Border BorderBrush="Gray" BorderThickness="0 0 0 1" Padding="0 5 50 5">
                                                <TextBlock Text="{TemplateBinding Content}"/>
                                            </Border>
                                        </ControlTemplate>
                                    </Setter.Value>
                                </Setter>

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/HomeView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/HomeView.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
+        <controls:AssetSummary Grid.Row="0" DataContext="{Binding AssetSummaryViewModel}"/>
         <controls:MajorIndexListing Grid.Row="1" Margin="0 10" DataContext="{Binding MajorIndexListingViewModel}"/>
     </Grid>
 </UserControl>
