--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/BuyView.xaml
@@ -6,8 +6,13 @@
              xmlns:local="clr-namespace:SimpleTrader.WPF.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </UserControl.Resources>
     <Grid Margin="20">
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
@@ -16,8 +21,16 @@
             <TextBox Width="100" Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}" />
             <Button Margin="5 0 0 0" Command="{Binding SearchSymbolCommand}" Content="Search" />
         </WrapPanel>
-
-        <Grid Grid.Row="1" Margin="0 20 0 0" MaxWidth="500">
+        <!--error message-->
+        <TextBlock Grid.Row="1" Margin="0 10 0 0" HorizontalAlignment="Center" DataContext="{Binding ErrorMessageViewModel}"
+                   Visibility="{Binding HasMessage, Converter={StaticResource BooleanToVisibilityConverter}}"
+                   Text="{Binding Message}" Foreground="DarkRed"></TextBlock>
+        <!--status message-->
+        <TextBlock Grid.Row="2" Margin="0 10 0 0" HorizontalAlignment="Center" DataContext="{Binding StatusMessageViewModel}"
+                   Visibility="{Binding HasMessage, Converter={StaticResource BooleanToVisibilityConverter}}"
+                   Text="{Binding Message}" Foreground="DarkGreen"></TextBlock>
+        
+        <Grid Grid.Row="3" Margin="0 20 0 0" MaxWidth="500">
             <Grid.Style>
                 <Style TargetType="Grid">
                     <Style.Triggers>
