--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
@@ -9,7 +9,9 @@
     <UserControl.Background>
         <ImageBrush ImageSource="/Resources/login-background.jpg" Opacity="0.9" Stretch="UniformToFill" />
     </UserControl.Background>
-    
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </UserControl.Resources>
     <Border Margin="25" Padding="50"
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
@@ -82,9 +84,12 @@
                     Content="Don't have an account?"
                     FontSize="14"
                     Foreground="Blue" />-->
+                <!--error message-->
+                <TextBlock Grid.Row="3" Margin="0 10 0 0" HorizontalAlignment="Center" DataContext="{Binding ErrorMessageViewModel}"
+                   Visibility="{Binding HasMessage, Converter={StaticResource BooleanToVisibilityConverter}}"
+                   Text="{Binding Message}" Foreground="DarkRed"></TextBlock>
 
-          
-        </Grid>
+            </Grid>
         </Grid>
     </Border>
 </UserControl>
