[MVVM]注册V、VM及绑定机制研究： 当WPF遇到DataTemplate中DataType属性指定的类型的对象时，它会自动应用该模板来渲染对象。这是通过WPF的资源系统完成的，该系统在渲染对象时查找匹配的DataTemplate。如果找到匹配的DataTemplate，它就会使用该模板来渲染对象

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
@@ -24,8 +24,12 @@
             </DataTemplate>
 
             <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
-                <!--the second LoginCommand is from LoginViewModel-->
-                <views:LoginView LoginCommand="{Binding LoginCommand}" />
+                <views:LoginView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewmodels:RegisterViewModel}">
+                <!--when the viewmodel is set to registerVm show the register view-->
+                <views:RegisterView />
             </DataTemplate>
         </ResourceDictionary>
 
