--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Controls/AssetSummary.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Controls/AssetSummary.xaml
@@ -30,7 +30,7 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" FontSize="18" Text="Top Assets"/>
-            <ListView Grid.Row="1" Margin="0 10 0 0" BorderThickness="0" ItemsSource="{Binding TopAssets}">
+            <ListView BorderThickness="0" ItemsSource="{Binding TopAssets}">
                 <ListView.View>
                     <GridView>
                         <GridView.ColumnHeaderContainerStyle>
@@ -46,25 +46,20 @@
                                 </Setter>
                             </Style>
                         </GridView.ColumnHeaderContainerStyle>
-                        <GridViewColumn Header="Symbol" DisplayMemberBinding="{Binding Symbol}"></GridViewColumn>
-                        <GridViewColumn Header="Shares" DisplayMemberBinding="{Binding Shares}"></GridViewColumn>
+
+                        <GridViewColumn Header="Symbol" DisplayMemberBinding="{Binding Symbol}"/>
+                        <GridViewColumn Header="Shares" DisplayMemberBinding="{Binding Shares}"/>
                     </GridView>
                 </ListView.View>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListViewItem">
-                                    <Grid Margin="0 10">
-                                        <GridViewRowPresenter TextBlock.Foreground="Black" Content="{TemplateBinding Content}"></GridViewRowPresenter>
-                                    </Grid>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
+                        <Setter Property="Focusable" Value="False"/>
+                        <Setter Property="IsHitTestVisible" Value="False"/>
+                        <Setter Property="Margin" Value="0 10"/>
+                        <Setter Property="Foreground" Value="Black"/>
                     </Style>
                 </ListView.ItemContainerStyle>
             </ListView>
-            <!--<local:AssetListing Grid.Row="1" FontSize="14" Margin="0 10 0 0" DataContext="{Binding AssetListingViewModel}"/>-->
         </Grid>
     </Grid>
 </UserControl>
