--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/LoginView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="SimpleTrader.WPF.Views.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  xmlns:components="clr-namespace:PasswordBoxMVVM.Components;assembly=PasswordBoxMVVM" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SimpleTrader.WPF.Views"
              mc:Ignorable="d" 
@@ -68,22 +68,24 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0" Text="Password" />
-                    <PasswordBox x:Name="pbPasswd" Grid.Column="1" Margin="20 0 0 0" Background="Transparent"/>
+                    <components:BindablePasswordBox Grid.Column="1" Margin="20,0,0,0"
+                        Password="{Binding Password}" />
             </Grid>
                 <!--Command="{Binding LoginCommand}"-->
                 <Button Grid.Row="2" Margin="0 10"
                     HorizontalAlignment="Center"
                     Content="Login"
                     IsDefault="True" 
-                    Click="Login_Click"/>
+                    Command="{Binding LoginCommand}"/>
 
-            <!--<Button Grid.Row="3" Margin="0 10 0 0"
+                <Button Grid.Row="3" Margin="0 10 0 0"
                     HorizontalAlignment="Center"
                     Background="Transparent"
                     Command="{Binding ViewRegisterCommand}"
                     Content="Don't have an account?"
                     FontSize="14"
-                    Foreground="Blue" />-->
+                    Foreground="Blue" />
+            
                 <!--error message-->
                 <TextBlock Grid.Row="3" Margin="0 10 0 0" HorizontalAlignment="Center" DataContext="{Binding ErrorMessageViewModel}"
                    Visibility="{Binding HasMessage, Converter={StaticResource BooleanToVisibilityConverter}}"
