[MVVM]增加V的典型步骤：1、di中注册，2、增加vm和v，datatemplate中指定关系，3、导航命令返回对应vm

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Controls/NavigationBar.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Controls/NavigationBar.xaml
@@ -43,7 +43,8 @@
                              IsChecked="{Binding CurrentViewModel, Mode=OneWay, Converter={StaticResource EqualValueToParameterConverter}, ConverterParameter={x:Type vm:PortfolioViewModel}}"/>
                 <RadioButton Grid.Column="2" Content="Buy" Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Buy}"
                              IsChecked="{Binding CurrentViewModel, Mode=OneWay, Converter={StaticResource EqualValueToParameterConverter}, ConverterParameter={x:Type vm:BuyViewModel}}"/>
-                <RadioButton Grid.Column="3" Content="Sell" Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Sell}"/>
+                <RadioButton Grid.Column="3" Content="Sell" Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Sell}"
+                             IsChecked="{Binding CurrentViewModel, Mode=OneWay, Converter={StaticResource EqualValueToParameterConverter}, ConverterParameter={x:Type vm:SellViewModel}}"/>
             </Grid>
         </Grid>
     </Grid>
