--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
@@ -22,7 +22,11 @@
             <DataTemplate DataType="{x:Type viewmodels:BuyViewModel}">
                 <views:BuyView />
             </DataTemplate>
-
+            
+            <DataTemplate DataType="{x:Type viewmodels:SellViewModel}">
+                <views:SellView />
+            </DataTemplate>
+            
             <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
                 <views:LoginView/>
             </DataTemplate>
