[MVVM]完善售出V与VM，提取买入与售出用于展示信息的VM，以及抽取公共控件（注意传入content使用时需templatebinding）

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Controls/SearchSymbolResultPanel.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Controls/SearchSymbolResultPanel.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:SimpleTrader.WPF.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <!--using template in order to parse sell or buy content with tempaltebinding-->
     <UserControl.Template>
         <ControlTemplate TargetType="UserControl">
             <Grid MaxWidth="500">
