--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/SellView.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/Views/SellView.xaml
@@ -23,7 +23,7 @@
             Width="300"
             ItemsSource="{Binding AssetListingViewModel.Assets}"
             SelectedItem="{Binding SelectedAsset}"
-            >
+            SelectionChanged="cbAssets_SelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -51,7 +51,7 @@
             Text="{Binding Message}"
             Visibility="{Binding HasMessage, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
-        <!--<controls:SearchSymbolResultPanel Grid.Row="3" Margin="0 20 0 0">
+        <controls:SearchSymbolResultPanel Grid.Row="3" Margin="0 20 0 0">
             <StackPanel HorizontalAlignment="Center">
                 <WrapPanel Margin="0 10">
                     <TextBlock Width="150" Text="Shares to sell:" />
@@ -70,6 +70,6 @@
                     Content="Sell"
                     FontSize="24" />
             </StackPanel>
-        </controls:SearchSymbolResultPanel>-->
+        </controls:SearchSymbolResultPanel>
     </Grid>
 </UserControl>
