[MVVM ]加载中，handy control登场，开始魔改

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
@@ -9,6 +9,9 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/Common.xaml" />
                 <ResourceDictionary Source="/Styles/NavigationBar.xaml" />
+                <!--handy control-->
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <!--if <ContentControl Content="{Binding Navigator.CurrentViewModel}"/> changed Content, show view depends on Datatype-->
             <DataTemplate DataType="{x:Type viewmodels:HomeViewModel}">
