[MVVM]换主页皮1(https://github.com/alihaider11/Social-Blade-Dashboard-C-WPF)

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/App.xaml
@@ -12,6 +12,11 @@
                 <!--handy control-->
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
+                <!--http://materialdesigninxaml.net/-->
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!--if <ContentControl Content="{Binding Navigator.CurrentViewModel}"/> changed Content, show view depends on Datatype-->
             <DataTemplate DataType="{x:Type viewmodels:HomeViewModel}">
