--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/MainWindow.xaml
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SimpleTrader.WPF"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:controls="clr-namespace:SimpleTrader.WPF.Controls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" WindowStyle="None">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -28,5 +29,77 @@
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
             <ContentControl Content="{Binding CurrentViewModel}"/>
         </ScrollViewer>
+
+        <Grid>
+            <materialDesign:Card Margin="10" UniformCornerRadius="15">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="15*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.Resources>
+                        <Style TargetType="materialDesign:PackIcon">
+                            <Setter Property="Width" Value="30"></Setter>
+                            <Setter Property="Height" Value="30"></Setter>
+                        </Style>
+                    </Grid.Resources>
+                    <Grid Grid.Column="0">
+                        <ListView Margin="0 15">
+                            <ListViewItem HorizontalAlignment="Center" Margin="0 10">
+                                <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left"
+                             BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                    <StackPanel Margin="-5">
+                                        <materialDesign:PackIcon Kind="Resistor"/>
+                                    </StackPanel>
+                                </Button>
+                            </ListViewItem>
+                            <ListViewItem HorizontalAlignment="Center" Margin="0">
+                                <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left"
+                             BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                    <StackPanel Margin="-5">
+                                        <materialDesign:PackIcon Kind="CircleSlice6"/>
+                                    </StackPanel>
+                                </Button>
+                            </ListViewItem>
+                            <ListViewItem HorizontalAlignment="Center" Margin="0 10">
+                                <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left"
+                             BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                    <StackPanel Margin="-5">
+                                        <materialDesign:PackIcon Kind="CalendarBlankOutline"/>
+                                    </StackPanel>
+                                </Button>
+                            </ListViewItem>
+                            <ListViewItem HorizontalAlignment="Center" Margin="0">
+                                <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left"
+                             BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                    <StackPanel Margin="-5">
+                                        <materialDesign:PackIcon Kind="EqualiserVertical"/>
+                                    </StackPanel>
+                                </Button>
+                            </ListViewItem>
+                            <ListViewItem HorizontalAlignment="Center" Margin="0 10">
+                                <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left"
+                             BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black">
+                                    <StackPanel Margin="-5">
+                                        <materialDesign:PackIcon Kind="ChatOutline"/>
+                                    </StackPanel>
+                                </Button>
+                            </ListViewItem>
+                            <ListViewItem HorizontalAlignment="Center" Margin="0 60 0 0">
+                                <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left"
+                             BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black" x:Name="btnExit" Click="btnExit_Click">
+                                    <StackPanel Margin="-5">
+                                        <materialDesign:PackIcon Kind="ExitToApp"/>
+                                    </StackPanel>
+                                </Button>
+                            </ListViewItem>
+                        </ListView>
+                    </Grid>
+                    <Grid Grid.Column="1" Background="#F6F5F8" Name="RenderPages">
+
+                    </Grid>
+                </Grid>
+            </materialDesign:Card>
+        </Grid>
     </Grid>
 </Window>
