--- a/RuoYi-Vue-master/ruoyi-vue3/src/assets/styles/index.scss
+++ b/RuoYi-Vue-master/ruoyi-vue3/src/assets/styles/index.scss
@@ -5,7 +5,7 @@
 @import './sidebar.scss';
 @import './btn.scss';
 @import './ruoyi.scss';
-
+@import './tailwindcss.scss';
 body {
   height: 100%;
   margin: 0;
