[ruoyi-vue]毛玻璃正在播放页，黑暗模式皮肤切换

--- a/RuoYi-Vue-master/ruoyi-vue3/src/assets/styles/index.scss
+++ b/RuoYi-Vue-master/ruoyi-vue3/src/assets/styles/index.scss
@@ -182,3 +182,11 @@ aside {
     margin-bottom: 10px;
   }
 }
+
+:root.dark .navbar {
+  background-color: #141414;
+}
+
+:root.dark .tags-view-container {
+  background-color: #141414;
+}
