--- a/ThreeJS/hdr/css/style.css
+++ b/ThreeJS/hdr/css/style.css
@@ -1,24 +1,24 @@
-body {
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-  background-color: #000;
-}
-
-header {
-  margin-top: 3em;
-  text-align: center;
-  color: white;
-}
-
-header h1 {
-  font-size: 2em;
-  font-weight: 900;
-}
-
-#container3D canvas {
-  width: 100vw !important;
-  height: 100vh !important;
+.progress-bar-container {
   position: absolute;
-  top: 0;
-  left: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#progress-bar {
+  width: 30%;
+  margin-top: 0.5%;
+  height: 2%;
+}
+
+label {
+  color: white;
+  font-size: 2rem;
 }
